--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -17,8 +17,14 @@ const { projects } = Astro.props;
       return (
         <div
           style={`top: ${top}px;`}
-          class="sticky mb-12 rounded-2xl border border-neutral/20 bg-black"
+          class="sticky mb-12 rounded-2xl border border-neutral/20 bg-black relative"
         >
+          <a 
+            href={linkPreview}
+            class="absolute inset-0 z-10" // Takes up full height/width, placed above content
+            aria-label={`View project details for ${name}`}
+          ></a>
+
           <div class="bg-difu relative z-[1] grid h-[580px] w-full grid-rows-2 rounded-2xl bg-[#1c232d]/85 before:absolute before:inset-0 before:z-[-1] before:rounded-2xl before:bg-[url(/raja.png)] before:bg-[length:128px] before:bg-repeat before:opacity-[5%] before:content-[''] sm:grid-cols-2 sm:grid-rows-1 md:h-96">
             <div class="px-6 pt-12">
               <h3 class="mb-5 font-serif text-3xl font-medium text-primary">
@@ -30,15 +36,14 @@ const { projects } = Astro.props;
                   href={linkSource}
                   target="_blank"
                   class="after:relative after:bottom-[-5px] after:content-[url(/external.svg)] hover:underline"
+                  onclick="event.stopPropagation();"
                 >
                   Source
                 </a>
                 <a
-                  href={linkPreview}
-                  target="_blank"
-                  class="after:relative after:bottom-[-5px] after:content-[url(/external.svg)] hover:underline"
+                  
                 >
-                  Preview
+                  Live
                 </a>
               </div>
             </div>
