--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -21,7 +21,7 @@ const { projects } = Astro.props;
         >
           <a 
             href={linkPreview}
-            class="absolute inset-0 z-10" // Takes up full height/width, placed above content
+            class="absolute inset-0 z-10"
             aria-label={`View project details for ${name}`}
           ></a>
 
