--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import About from "@components/About.astro";
 import "../styles/global.css";
 ---
 
-<Layout>
+<Layout title="Uzrakhan's Developer Portfolio">
   <Hero {...SITE_CONTENT.hero} />
   <Projects projects={SITE_CONTENT.projects} />
   <About {...SITE_CONTENT.about} name={SITE_CONTENT.hero.name} />
